demo code/MFC (VC++)/DLBT/DLBT.h

#define DLBT_API extern "C"  __declspec(dllexport)
#define DLBT_API extern "C"  __declspec(dllimport)


// ***************************  以下是单个下载相关的接口 ********************************

// 单个下载的状态
enum DLBT_DOWNLOAD_STATE
{
	BTDS_QUEUED,	                // 已添加
	BTDS_CHECKING_FILES,	        // 正在检查校验文件
	BTDS_DOWNLOADING_TORRENT,	    // 无种子模式下，正在获取种子的信息
	BTDS_DOWNLOADING,	            // 正在下载中
    BTDS_PAUSED,                    // 暂停
	BTDS_FINISHED,	                // 指定的文件下载完成
	BTDS_SEEDING,	                // 供种中（种子中的所有文件下载完成）
	BTDS_ALLOCATING,                // 正在预分配磁盘空间 -- 预分配空间，减少磁盘碎片，和
                                    // 启动选项有关，启动时如果选择预分配磁盘方式，可能进入该状态
    BTDS_ERROR,                     // 出错，可能是写磁盘出错等原因，详细原因可以通过调用DLBT_Downloader_GetLastError获知
};


// 文件的分配模式,详见使用说明文档
enum DLBT_FILE_ALLOCATE_TYPE
{
    FILE_ALLOCATE_REVERSED  = 0,   // 预分配模式,预先创建文件,下载每一块后放到正确的位置
    FILE_ALLOCATE_SPARSE,          // Default mode, more effient and less disk space.NTFS下有效 http://msdn.microsoft.com/en-us/library/aa365564(VS.85).aspx
    FILE_ALLOCATE_COMPACT          // 文件大小随着下载不断增长,每下载一块数据按次序紧密排在一起,但不是他们的最终位置,下载中不断调整位置,最后文件位置方能确定         .
};


// 无种子模式的另一个接口，可以直接通过地址下载，地址格式为： DLBT://xt=urn:btih: Base32 编码过的info-hash [ &dn= Base32后的名字 ] [ &tr= Base32后的tracker的地址 ]  ([]为可选参数)
// 完全遵循uTorrent的官方BT扩展协议
DLBT_API HANDLE WINAPI DLBT_Downloader_Initialize_FromUrl (
    LPCSTR              url,                            // 网址
    LPCWSTR             outPath,                        // 保存目录
    LPCWSTR             statusFile = L"",              // 状态文件的路径
    DLBT_FILE_ALLOCATE_TYPE  fileAllocateType = FILE_ALLOCATE_SPARSE,
    BOOL                bPaused = FALSE,
    LPCWSTR             rootPathName = NULL,            // 种子内部目录的名字，如果为NULL，则用种子中的名字，否则改为指定的这个名字。
                                                        // 对单个文件则直接进行改名为指定的这个名字
    BOOL                bPrivateProtocol = FALSE,
	BOOL				bZipTransfer = FALSE			// 是否压缩传输，一般用于文本文件的下载，如果对方是支持这个功能的dlbt用户，则可以互相压缩传输，减少流量
    );


//////////////////////   Move的相关接口   /////////////
// Move的结果
enum DOWNLOADER_MOVE_RESULT
{
	DLBT_MOVED	= 0,	//移动成功
	DLBT_MOVE_FAILED,	//移动失败
	DLBT_MOVING         //正在移动
};


//移动到哪个目录，如果是同一磁盘分区，是剪切；如果是不同分区，是复制后删除原始文件。由于操作是异步操作，所以立即返回
//结果使用DLBT_Downloader_GetMoveResult去获取
DLBT_API void WINAPI DLBT_Downloader_Move (HANDLE hDownloader, LPCWSTR savePath);

//查看移动操作的结果
DLBT_API DOWNLOADER_MOVE_RESULT WINAPI DLBT_Downloader_GetMoveResult (
	HANDLE			hDownloader,   // 下载任务的句柄
	LPSTR			errorMsg,      // 用于返回出错信息的内存，在DLBT_MOVE_FAILED状态下这里返回出错的详情。如果传入NULL，则不返回错误信息
	int				msgSize		   // 出错信息内存的大小
	);


DLBT_API HANDLE WINAPI DLBT_OpenTorrentFromBuffer (
    LPBYTE      torrentFile,                    // 可以打开内存中的字符流数据
    DWORD       dwTorrentFileSize,              // 种子内容的大小
    LPCSTR      password = NULL                 // 是否加密种子，如果为Null，则是普通种子，否则是种子的密码,以此密码进行解密
    );


DLBT_API HRESULT WINAPI DLBT_Torrent_GetComment (
    HANDLE      hTorrent,       // 种子文件句柄
    LPWSTR      pBuffer,        // 用于返回信息的内存，可以为空，为空则在pBufferSize中返回评论的实际大小
    int     *   pBufferSize     // 传入评论的内存大小，传出评论的实际大小
    );


// 返回创建软件的信息
DLBT_API HRESULT WINAPI DLBT_Torrent_GetCreator (
    HANDLE      hTorrent,       // 种子文件句柄
    LPWSTR      pBuffer,        // 用于返回信息的内存，可以为空，为空则在pBufferSize中返回作者信息的实际大小
    int     *   pBufferSize     // 传入存放信息的内存大小，传出作者信息的实际大小
    );


// 返回发布者信息
DLBT_API HRESULT WINAPI DLBT_Torrent_GetPublisher (
    HANDLE      hTorrent,       // 种子文件句柄
    LPWSTR      pBuffer,        // 用于返回信息的内存，可以为空，为空则在pBufferSize中返回作者信息的实际大小
    int     *   pBufferSize     // 传入存放信息的内存大小，传出作者信息的实际大小
    );


DLBT_API HRESULT WINAPI DLBT_Torrent_MakeURL (  // 通过种子，制作一个可以不需要种子即可下载的网址，参考DLBT_Downloader_Initialize_FromUrl
    HANDLE      hTorrent,
    LPSTR       pBuffer,                // 用于返回信息的内存，可以为空，为空则在pBufferSize中返回名字的实际大小
    int  *      pBufferSize             // 传入buffer的内存大小，传出URL的实际大小
    );


DLBT_API int WINAPI DLBT_Torrent_GetTrackerCount (HANDLE hTorrent);


DLBT_API LPCSTR WINAPI DLBT_Torrent_GetTrackerUrl (
    HANDLE      hTorrent,       // 种子文件句柄
    int         index           // Tracker的序号，从0开始
    );


DLBT_API UINT64 WINAPI DLBT_Torrent_GetTotalFileSize (HANDLE hTorrent);

DLBT_API BOOL WINAPI DLBT_Torrent_IsPadFile (HANDLE hTorrent, int index);

DLBT_API UINT64 WINAPI DLBT_Torrent_GetFileSize (
    HANDLE      hTorrent,           // 种子文件句柄
    int         index               // 要获取大小的文件的序号，文件序号是从0开始的
    );

DLBT_API HRESULT WINAPI DLBT_Torrent_GetFilePathName (
    HANDLE      hTorrent,           // 种子文件句柄
    int         index,              // 要获取名字的文件的序号，文件序号是从0开始的
    LPWSTR      pBuffer,            // 传出文件名
    int     *   pBufferSize        // 传入buffer的大小，传出文件名的实际长度
    );


DLBT_API int WINAPI DLBT_Torrent_GetPieceCount (HANDLE hTorrent);


// **************************** 以下是种子市场有关的接口 *****************************
// 种子市场仅在商业版本中提供，免费试用版中暂时不提供该功能
struct DLBT_TM_ITEM     //标记种子市场中的一个种子文件
{
	DLBT_TM_ITEM(): fileSize (0) {}

	UINT64  fileSize;      // the size of this file
	char	name[256];     // 名字
	LPCSTR	url;           // 用于下载的url
	LPCSTR  comment;       // 种子描述
};


struct DLBT_TM_LIST //标记种子市场中的一批种子文件（多个）
{
	int				count;      //数目
	DLBT_TM_ITEM	items[1];   //种子列表
};


// 在本机的种子市场中添加一个种子文件
DLBT_API HRESULT WINAPI DLBT_TM_AddSelfTorrent (LPCWSTR torrentFile, LPCSTR password = NULL);

// 在本机的种子市场中移除一个种子文件
DLBT_API HRESULT WINAPI DLBT_TM_RemoveSelfTorrent (LPCWSTR torrentFile, LPCSTR password = NULL);


// 获取本机种子市场中的种子列表，获取到的列表需要调用DLBT_TM_FreeTMList函数进行释放掉
DLBT_API HRESULT WINAPI DLBT_TM_GetSelfTorrentList (DLBT_TM_LIST ** ppList);

// 获取其它人种子市场中的种子列表，获取到的列表需要调用DLBT_TM_FreeTMList函数进行释放掉
DLBT_API HRESULT WINAPI DLBT_TM_GetRemoteTorrentList (DLBT_TM_LIST ** ppList);


// 释放DLBT_TM_GetSelfTorrentList或者DLBT_TM_GetRemoteTorrentList获取到的种子列表的内存
DLBT_API HRESULT WINAPI DLBT_TM_FreeTMList (DLBT_TM_LIST * pList);


// 清空所有获取到的其它人的种子列表
DLBT_API void WINAPI DLBT_TM_ClearRemoteTorrentList ();

// 清空所有自己种子市场中的种子列表
DLBT_API void WINAPI DLBT_TM_ClearSelfTorrentList ();


// 设置一下是否启用种子市场，默认不启用。
DLBT_API BOOL WINAPI DLBT_EnableTorrentMarket (bool bEnable);



// *********************  以下是防火墙和UPnP穿透等P2P辅助性接口 **********************

// 端口的类型
enum PORT_TYPE
{
    TCP_PORT        = 1,            // TCP 端口
    UDP_PORT                        // UDP 端口
};


//  将某个应用程序添加到ICF防火墙的例外中去，可独立于内核应用，不启动内核仍然可以使用该函数
DLBT_API BOOL WINAPI DLBT_AddAppToWindowsXPFirewall (
    LPCWSTR      appFilePath,        // 程序的路径（包括exe的名字）
    LPCWSTR      ruleName            // 在防火墙的例外中显示的这条规则的名字
    );

// 将某个端口加入UPnP映射，点量BT内部的所有端口已经自动加入，不需要再次加入，这里提供出来是供外部程序加入自己所需端口
DLBT_API void WINAPI DLBT_AddUPnPPortMapping(
	USHORT      nExternPort,        // NAT要打开的外部端口
	USHORT      nLocalPort,         // 映射的内部端口（局域网端口），一般是程序在监听的端口
	PORT_TYPE   nPortType,          // 端口类型（UDP还是TCP）
	LPCSTR      appName             // 在NAT上显示的这条规则的名字
	);


// 获得当期系统的并发连接数限制，如果返回0则表示系统可能不是受限的XP系统，无需修改连接数限制
// 可独立于内核使用，启动内核前即可使用
DLBT_API DWORD WINAPI DLBT_GetCurrentXPLimit ();


// 修改XP的并发连接数限制，返回BOOL标志是否成功
DLBT_API BOOL WINAPI DLBT_ChangeXPConnectionLimit (DWORD num);




// ***************************  以下是批量获取信息的接口 ********************************

// 内核的基本信息
struct KERNEL_INFO
{
    USHORT                      port;                           // 监听端口
    BOOL                        dhtStarted;                     // DHT是否启动
    int                         totalDownloadConnectionCount;   // 总的下载连接数
    int                         downloadCount;                  // 下载任务的个数
    int                         totalDownloadSpeed;             // 总下载速度
    int                         totalUploadSpeed;               // 总上传速度
    UINT64                      totalDownloadedByteCount;       // 总下载的字节数，不包括通讯，是文件数据，包括可能的错误数据（比如我从A用户那获取了一个分块，发现校验失败，也会被记录在内）。
    UINT64                      totalUploadedByteCount;         // 总上传的字节数，不包括上行通讯，是文件的上传

    int                         peersNum;                       // 当前连接上的节点总数
    int                         dhtConnectedNodeNum;            // dht连接上的活跃节点数
    int                         dhtCachedNodeNum;               // dht已知的节点数
    int                         dhtTorrentNum;                  // dht中已知的torrent文件数
};


// 单个下载任务的基本信息
struct DOWNLOADER_INFO
{
    DLBT_DOWNLOAD_STATE          state;                         // 下载的状态
    float                       percentDone;                    // 已经下载的数据，相比整个torrent总数据的大小 （如果只选择了一部分文件下载，那么该进度不会到100%）
    int                         downConnectionCount;            // 下载建立的连接数
    int                         downloadLimit;                  // 该任务的下载限速
    int                         connectionCount;                // 总建立的连接数（包括上传）
    int                         totalCompletedSeeds;            // Tracker启动以来，总下载完成的人数，如果Tracker不支持scrap，则返回-1
    int                         inCompleteNum;                  // 总的未完成的人数，如果Tracker不支持scrap，则返回-1
    int                         seedConnected;                  // 连上的下载完成的人数
    int                         totalCurrentSeedCount;          // 当前在线的总的下载完成的人数（包括连上的和未连上的）
    int                         totalCurrentPeerCount;          // 当前在线的总的下载的人数（包括连上的和未连上的）
    float                       currentTaskProgress;            // 当前任务的进度 （100.0%代表完成）
    BOOL                        bReleasingFiles;                // 是否正在释放文件句柄，一般下载完成后，虽然进度完成了，但文件句柄和缓存内部还可能需要一点时间在释放。
    UINT                        downloadSpeed;                  // 下载的速度
    UINT                        uploadSpeed;                    // 上传的速度
    UINT                        serverPayloadSpeed;             // 从服务器下载的总有效速度（不包括握手消息等非数据性传输）
    UINT                        serverTotalSpeed;               // 从服务器下载的总速度(包括握手消息、连接通讯的消耗）

    UINT64                      wastedByteCount;                // 非数据的字节数（控制信息等）
    UINT64                      totalDownloadedBytes;           // 下载的数据的字节数，但不是本次启动后的，是累积实际文件完成校验的。比如刚启动，如果本地文件就有500M是上次下载完成后的，那么等文件校验通过，这个数字会从500M开始。
    UINT64                      totalUploadedBytes;             // 上传的数据的字节数，这个是指本次启动后的累积有效上传数据
    UINT64                      totalWantedBytes;               // 选择的总数据大小
    UINT64                      totalWantedDoneBytes;           // 选择的总数据中，已下载完成的数据大小

    UINT64                      totalServerPayloadBytes;        // 从服务器下载的数据总量（本次启动以来的文件数据，也包括了如果收到错误的数据，即使后来丢弃的 -- 不过一般服务器如果没问题，不会丢弃数据的）
    UINT64                      totalServerBytes;               // 从服务器下载的所有数据的总量（包括totalServerPayloadBytes，以及握手数据、收发消息等）
    UINT64                      totalPayloadBytesDown;          // 本次启动后总的下载的数据块类型的数据量（包括了服务器的数据，以及可能丢弃的数据）
    UINT64                      totalBytesDown;                 // 本次启动后，总的所有数据的下行数据量（包括了服务器以及所有客户的数据、辅助通讯数据量等），这个数据因为有很多协议数据，文件下载完成后，给别人上传时的一些下行通讯也会记录在内
																// 所以这个数字随着启动时间，会不停增加

    // Torrent信息
    BOOL                        bHaveTorrent;                   // 用于无种子下载模式，判断是否已经获取到了torrent文件
    UINT64                      totalFileSize;                  // 文件的总大小
    UINT64                      totalFileSizeExcludePadding;    // 实际文件的大小，不含padding文件, 如果种子中无padding文件，则和totalFileSize相等
    UINT64                      totalPaddingSize;               // 所有padding数据的大小。如果制作种子时没启用padding文件，则为0
    int                         pieceCount;                     // 分块数
    int                         pieceSize;                      // 每个块的大小
    char                        infoHash [256];                 // 文件的Hash值
};


// 每个连接上的节点（用户）的信息
struct PEER_INFO_ENTRY
{
	int							connectionType;					// 连接类型 0：标准BT(tcp); 1: P2SP（http） 2: udp（可能是直接连接或者穿透）
    int                         downloadSpeed;                  // 下载速度
    int                         uploadSpeed;                    // 上传速度
    UINT64                      downloadedBytes;                // 下载的字节数
    UINT64                      uploadedBytes;                  // 上传的字节数

    int                         uploadLimit;                    // 该连接的上传限速，比如如果对服务器的IP限速了，则这地方可以看到这个IP的限速情况
    int                         downloadLimit;                  // 该连接的下载限速，比如如果对服务器的IP限速了，则这地方可以看到这个IP的限速情况

    char                        ip [64];                        // 对方IP
    char                        client [64];                    // 对方使用的客户端

};


// 所有连接上的节点（用户）的信息
struct PEER_INFO
{
    int                         count;                          // 总的节点（用户）数
    PEER_INFO_ENTRY             entries [1];                    // 节点信息的数组
};



// 获取批量信息的接口
DLBT_API HRESULT WINAPI DLBT_GetKernelInfo (KERNEL_INFO * info);

DLBT_API HRESULT WINAPI DLBT_GetDownloaderInfo (HANDLE hDownloader, DOWNLOADER_INFO * info);


// 获得完成节点列表，列表由DLL分配，因此，需要调用DLBT_FreeDownloaderPeerInfoList函数释放该内存
DLBT_API HRESULT WINAPI DLBT_GetDownloaderPeerInfoList (HANDLE hDownloader, PEER_INFO ** ppInfo);

DLBT_API void WINAPI DLBT_FreeDownloaderPeerInfoList (PEER_INFO * pInfo);


DLBT_API void WINAPI DLBT_SetDHTFilePathName (LPCWSTR dhtFile);


// 可以自定义IO操作的函数（可以将BT里面的读写文件等所有操作外部进行处理，替换内部的读写函数等）
// 该功能为高级版功能，请联系点量获取技术支持，默认版本中不开放该功能

// 设置IO操作的接管结构体的指针
DLBT_API void WINAPI DLBT_Set_IO_OP(void * op);

// 对结构体里面的所有函数先赋值默认的函数指针
DLBT_API void WINAPI DLBT_InitDefault_IO_OP(void * op);

// 获取系统内部目前在用的IO对象的指针
DLBT_API void * WINAPI DLBT_Get_IO_OP();