demo code/VB/DLBT.bas


Declare Function DLBT_OpenTorrentFromBuffer Lib "DLBT.dll" (ByVal torrentFile As Byte, _
                                                ByVal dwTorrentFileSize As Long, _
                                                ByVal password As String) As Long
Declare Function DLBT_Torrent_GetComment Lib "DLBT.dll" (ByVal hTorrent As Long, _
                                                ByVal pBuffer As String, _
                                                ByRef pBufferSize As Long) As Long
' 返回创建软件的信息
Declare Function DLBT_Torrent_GetCreator Lib "DLBT.dll" (ByVal hTorrent As Long, _
                                                ByVal pBuffer As String, _
                                                ByRef pBufferSize As Long) As Long
' 返回发布者信息
Declare Function DLBT_Torrent_GetPublisher Lib "DLBT.dll" (ByVal hTorrent As Long, _
                                                ByVal pBuffer As String, _
                                                ByRef pBufferSize As Long) As Long

' 通过种子，制作一个可以不需要种子即可下载的网址，参考DLBT_Downloader_Initialize_FromUrl
Declare Function DLBT_Torrent_MakeURL Lib "DLBT.dll" (ByVal hTorrent As Long, _
                                                      ByVal pBuffer As String, _
                                                      ByRef pBufferSize As Long) As Long
    
Declare Function DLBT_Torrent_GetTrackerCount Lib "DLBT.dll" (ByVal hTorrent As Long) As Long

Declare Function DLBT_Torrent_GetTrackerUrl Lib "DLBT.dll" (ByVal hTorrent As Long, ByVal Index As Long) As String

'取得种子文件内的总计文件大小
Declare Function DLBT_Torrent_GetTotalFileSize Lib "DLBT.dll" (ByVal hTorrent As Long) As UINT64

' 单个种子中包含多个文件时的一些接口,index为文件的序列号，从0开始
Declare Function DLBT_Torrent_GetPieceCount Lib "DLBT.dll" (ByVal hTorrent As Long) As Long

Declare Function DLBT_Torrent_IsPadFile Lib "DLBT.dll" (ByVal hTorrent As Long, ByVal Index As Long) As Boolean
Declare Function DLBT_Torrent_GetFileSize Lib "DLBT.dll" (ByVal hTorrent As Long, ByVal Index As Long) As UINT64
'通过种子句柄,返回指定序号的文件名
Declare Function DLBT_Torrent_GetFilePathName Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal Index As Long, ByVal pBuffer As Long, ByRef pBufferSize As Long) As Long


' 暂时没有翻译以下几个函数
'//////////////////////   Move的相关接口   /////////////
'// Move的结果
'Enum DOWNLOADER_MOVE_RESULT
'{
'    DLBT_MOVED  = 0,    //移动成功
'    DLBT_MOVE_FAILED,   //移动失败
'    DLBT_MOVING         //正在移动
'};
'
'//移动到哪个目录，如果是同一磁盘分区，是剪切；如果是不同分区，是复制后删除原始文件。由于操作是异步操作，所以立即返回
'//结果使用DLBT_Downloader_GetMoveResult去获取
'DLBT_API void WINAPI DLBT_Downloader_Move (HANDLE hDownloader, LPCSTR savePath);
'//查看移动操作的结果
'DLBT_API DOWNLOADER_MOVE_RESULT WINAPI DLBT_Downloader_GetMoveResult (
'    HANDLE          hDownloader,   // 下载任务的句柄
'    LPSTR           errorMsg,      // 用于返回出错信息的内存，在DLBT_MOVE_FAILED状态下这里返回出错的详情。如果传入NULL，则不返回错误信息
'    int             msgSize        // 出错信息内存的大小
'    );
   

' 暂时没有翻译以下几个函数
'// **************************** 以下是种子市场有关的接口 *****************************
'// 种子市场仅在商业版本中提供，免费试用版中暂时不提供该功能
'struct DLBT_TM_ITEM   //标记种子市场中的一个种子文件
'{
'    DLBT_TM_ITEM(): fileSize (0) {}
'
'    UINT64  fileSize;      // the size of this file
'    char    name[256];     // 名字
'    LPCSTR  url;           // 用于下载的url
'    LPCSTR  comment;       // 种子描述
'};
'
'struct DLBT_TM_LIST       //标记种子市场中的一批种子文件（多个）
'{
'    int             count;      //数目
'    DLBT_TM_ITEM    items[1];   //种子列表
'};
'
'// 在本机的种子市场中添加一个种子文件
'DLBT_API HRESULT WINAPI DLBT_TM_AddSelfTorrent (LPCSTR torrentFile, LPCSTR password = NULL);
'// 在本机的种子市场中移除一个种子文件
'DLBT_API HRESULT WINAPI DLBT_TM_RemoveSelfTorrent (LPCSTR torrentFile, LPCSTR password = NULL);

'// 获取本机种子市场中的种子列表，获取到的列表需要调用DLBT_TM_FreeTMList函数进行释放掉
'DLBT_API HRESULT WINAPI DLBT_TM_GetSelfTorrentList (DLBT_TM_LIST ** ppList);
'// 获取其它人种子市场中的种子列表，获取到的列表需要调用DLBT_TM_FreeTMList函数进行释放掉
'DLBT_API HRESULT WINAPI DLBT_TM_GetRemoteTorrentList (DLBT_TM_LIST ** ppList);

'// 释放DLBT_TM_GetSelfTorrentList或者DLBT_TM_GetRemoteTorrentList获取到的种子列表的内存
'DLBT_API HRESULT WINAPI DLBT_TM_FreeTMList (DLBT_TM_LIST * pList);
'
'// 清空所有获取到的其它人的种子列表
'DLBT_API void WINAPI DLBT_TM_ClearRemoteTorrentList ();
'// 清空所有自己种子市场中的种子列表
'DLBT_API void WINAPI DLBT_TM_ClearSelfTorrentList ();
'
'// 设置一下是否启用种子市场，默认不启用。
'DLBT_API BOOL WINAPI DLBT_EnableTorrentMarket (bool bEnable);

' *********************  以下是防火墙和UPnP穿透等P2P辅助性接口 **********************

' 端口的类型
Public Enum PORT_TYPE
    TCP_PORT = 1                    ' TCP 端口
    UDP_PORT = 2                    ' UDP 端口
End Enum

'  将某个应用程序添加到ICF防火墙的例外中去，可独立于内核应用，不启动内核仍然可以使用该函数
Declare Function DLBT_AddAppToWindowsXPFirewall Lib "DLBT.dll" (ByVal appFilePath As String, ByVal ruleName As String) As Boolean
'  将某个端口加入UPnP映射，点量BT内部的所有端口已经自动加入，不需要再次加入，这里提供出来是供外部程序加入自己所需端口
Declare Function DLBT_AddUPnPPortMapping Lib "DLBT.dll" (ByVal nExternPort As Integer, _
                          ByVal nLocalPort As Integer, _
                          ByVal nPortType As PORT_TYPE, _
                          ByVal appName As String) As Boolean
                          
' 获得当期系统的并发连接数限制，如果返回0则表示系统可能不是受限的XP系统，无需修改连接数限制
' 可独立于内核使用，启动内核前即可使用
Declare Function DLBT_GetCurrentXPLimit Lib "DLBT.dll" () As Long

' 修改XP的并发连接数限制，返回BOOL标志是否成功
Declare Function DLBT_ChangeXPConnectionLimit Lib "DLBT.dll" (ByVal num As Long) As Boolean


' ***************************  以下是批量获取信息的接口 ********************************

' 内核的基本信息
Type KERNEL_INFO
    port                            As Long             ' 监听端口
    dhtStarted                      As Long             ' DHT是否启动
    totalDownloadConnectionCount    As Long             ' 总的下载连接数
    downloadCount                   As Long             ' 下载任务的个数
    totalDownloadSpeed              As Long             ' 总下载速度
    totalUploadSpeed                As Long             ' 总上传速度
    totalDownloadedByteCount        As UINT64           ' 总下载的字节数
    totalUploadedByteCount          As UINT64           ' 总上传的字节数
'
    peersNum                        As Long             ' 当前连接上的节点总数
    dhtConnectedNodeNum             As Long             ' dht连接上的活跃节点数
    dhtCachedNodeNum                As Long             ' dht已知的节点数
    dhtTorrentNum                   As Long             ' dht中已知的torrent文件数
End Type

' 单个下载任务的基本信息
Type DOWNLOADER_INFO
    state                       As DLBT_DOWNLOAD_STATE          ' 下载的状态
    percentDone                 As Single                       ' 已经下载的数据，相比整个torrent总数据的大小 （如果只选择了一部分文件下载，那么该进度不会到100%）
    downConnectionCount         As Long                         ' 下载建立的连接数
    downloadLimit               As Long                         ' 该任务的下载限速
    connectionCount             As Long                         ' 总建立的连接数（包括上传）
    totalCompletedSeeds         As Long                         ' Tracker启动以来，总下载完成的人数，如果Tracker不支持scrap，则返回-1
    inCompleteNum               As Long                         ' 总的未完成的人数，如果Tracker不支持scrap，则返回-1
    seedConnected               As Long                         ' 连上的下载完成的人数
    totalCurrentSeedCount       As Long                         ' 当前在线的总的下载完成的人数（包括连上的和未连上的）
    totalCurrentPeerCount       As Long                         ' 当前在线的总的下载的人数（包括连上的和未连上的）
    currentTaskProgress         As Single                       ' 当前任务的进度(100%代表完成)
    bReleasingFiles             As Long                         ' 是否正在释放文件句柄，一般下载完成后，虽然进度完成了，但文件句柄和缓存内部还可能需要一点时间在释放。大于0代表还在释放，0代表释放完成
    
    downloadSpeed               As Long                         ' 下载的速度
    uploadSpeed                 As Long                         ' 上传的速度
    serverPayloadSpeed          As Long                         ' 从服务器下载的总有效速度（不包括握手消息等非数据性传输）
    serverTotalSpeed            As Long                         ' 从服务器下载的总速度(包括握手消息、连接通讯的消耗）
    
    wastedByteCount             As UINT64                       ' 非数据的字节数（控制信息等）
    totalDownloadedBytes        As UINT64                       ' 下载的数据的字节数
    totalUploadedBytes          As UINT64                       ' 上传的数据的字节数
    totalWantedBytes            As UINT64                       ' 选择的总数据大小
    totalWantedDoneBytes        As UINT64                       ' 选择的总数据中，已下载完成的数据大小
     
    totalServerPayloadBytes     As UINT64                       ' 从服务器下载的数据总量（本次启动以来的文件数据，也包括了如果收到错误的数据，即使后来丢弃的 -- 不过一般服务器如果没问题，不会丢弃数据的）
    totalServerBytes            As UINT64                       ' 从服务器下载的所有数据的总量（包括totalServerPayloadBytes，以及握手数据、收发消息等）
    totalPayloadBytesDown       As UINT64                       ' 本次启动后总的下载的数据块类型的数据量（包括了服务器的数据，以及可能丢弃的数据）
    totalBytesDown              As UINT64                       ' 本次启动后，总的所有数据的下行数据量（包括了服务器以及所有客户的数据、辅助通讯数据量等）


    ' Torrent信息
    bHaveTorrent                As Long                         ' 用于无种子下载模式，判断是否已经获取到了torrent文件，大于0代表已经获取到了，0代表还未获取到
    totalFileSize               As UINT64                       ' 文件的总大小
    totalFileSizeExcludePadding As UINT64                       ' 实际文件的大小，不含padding文件。如果种子中无padding文件，则和totalFileSize相等
    totalPaddingSize            As UINT64                       ' 所有padding数据的大小。如果制作种子时没启用padding文件，则为0
    pieceCount                  As Long                         ' 分块数
    pieceSize                   As Long                         ' 每个块的大小
       
    infoHash(256)               As Byte                         ' 文件的Hash值
End Type

''// 每个连接上的节点（用户）的信息
Type PEER_INFO_ENTRY
    connectionType              As Long                         '连接类型 0：标准BT(tcp); 1: P2SP（http） 2: udp（可能是直接连接或者穿透）
    downloadSpeed               As Long                         '下载速度
    uploadSpeed                 As Long                         '上传速度
    downloadedBytes             As UINT64                       '下载的字节数
    uploadedBytes               As UINT64                       '上传的字节数
    
    uploadLimit                 As Long                         ' 该连接的上传限速，比如如果对服务器的IP限速了，则这地方可以看到这个IP的限速情况
    downloadLimit               As Long                         ' 该连接的下载限速，比如如果对服务器的IP限速了，则这地方可以看到这个IP的限速情况

    ip(63)                      As Byte                         '对方IP
    client(63)                  As Byte                         '对方使用的客户端
End Type
    
''
''// 所有连接上的节点（用户）的信息
''struct PEER_INFO
''{
''    int                         count;                          // 总的节点（用户）数
''    PEER_INFO_ENTRY             entries [1];                    // 节点信息的数组
''};
''
''
' 获取批量信息的接口
Declare Function DLBT_GetKernelInfo Lib "DLBT.dll" (ByRef info As KERNEL_INFO) As Long
Declare Function DLBT_GetDownloaderInfo Lib "DLBT.dll" (ByVal hDownloader As Long, ByRef info As DOWNLOADER_INFO) As Long

''// 获得完成节点列表，列表由DLL分配，因此，需要调用DLBT_FreeDownloaderPeerInfoList函数释放该内存
Declare Function DLBT_GetDownloaderPeerInfoList Lib "DLBT.dll" (ByVal hDownloader As Long, ByRef ppInfo As Long) As Long
Declare Function DLBT_FreeDownloaderPeerInfoList Lib "DLBT.dll" (ByVal ppInfo As Long) As Long

Declare Sub DLBT_SetDHTFilePathName Lib "DLBT.dll" (ByVal dhtFile As String)

'// 可以自定义IO操作的函数（可以将BT里面的读写文件等所有操作外部进行处理，替换内部的读写函数等）
'// 该功能为高级版功能，请联系点量获取技术支持，默认版本中不开放该功能

'// 设置IO操作的接管结构体的指针
Declare Sub DLBT_Set_IO_OP Lib "DLBT.dll" (ByVal op As Long)
'// 对结构体里面的所有函数先赋值默认的函数指针
Declare Sub DLBT_InitDefault_IO_OP Lib "DLBT.dll" (ByVal op As Long)
'// 获取系统内部目前在用的IO对象的指针
Declare Function DLBT_Get_IO_OP Lib "DLBT.dll" () As Long

'// 获取系统原始IO的指针
Declare Function LBT_Get_RAW_IO_OP Lib "DLBT.dll" () As Long

' 辅助函数
Public Declare Function lstrcpy Lib "kernel32" Alias "lstrcpyA" (ByVal lpString1 As String, ByVal lpString2 As Long) As Long

